Fix privacy symbol alignment issue in lightbox

--- a/app/assets/css/rtmedia.css
+++ b/app/assets/css/rtmedia.css
@@ -1253,6 +1253,7 @@ img.mfp-img {
 .rtm-time-privacy .dashicons {
   font-size: 14px;
   line-height: 1.5;
+  margin-top: -2px;
 }
 
 .rtmedia-actions-before-comments > span {
